[package]
name = "fruitshop-api"
version = "0.4.0"
edition = "2024"

[dependencies]
axum = "0.8"
base64 = "0.22"
chrono = "0.4"
deadpool-postgres = "0.14"
dotenvy = "0.15"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
